# 14-premio-sof-front

./: .env-example  Dockerfile  README.md  app.py  pyproject.toml
src/: app.py  valida_whatsapp.py
